examples/test/testpolicy17254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17254
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key39: value30
      key30: value0
      key34: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value20
          key36: value6
      podSelector:
        matchLabels:
          key36: value11
          key5: value33
          key14: value38
